# taskeel-repo

./: .gitignore  Dockerfile  Makefile  docker-compose.yml  pyproject.toml  start_api.sh  start_web_ui.sh
api/: README.md  __init__.py  app.py  web_ui.py
models/: models.py
ui/: text_preprocessor.py  web_ui.py
