[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tashkeel"
version = "0.1.0"
description = "Arabic text diacritization (tashkeel) using neural models"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "torch",
    "pytorch_lightning",
    "tqdm",
    "python-Levenshtein",
    "matplotlib",
    "pandas",
    "scikit-learn",
    "fastapi>=0.95.0",
    "uvicorn>=0.21.0",
    "pydantic>=1.10.0",
    "python-multipart>=0.0.6",
    "streamlit>=1.26.0",
    "pandas>=1.5.0",
    "requests>=2.28.0",
]

[tool.setuptools]
package-dir = { "" = "." }
packages = ["ui", "api", "catt", "models"]
